--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
 
 </header>
 
+<section class="home">
+
+    <div class="content">
+        <h1 class="title">fresh <span>coffee</span> in the <span>morning</span> </h1>
+        <p class="description">lorem ipsum dolor sit amet</p>
+        <a href="#" class="btn">get started</a>
+    </div>
+
+    <div class="image">
+        <img src="images/home.png" alt="" class="move">
+    </div>
+
+
+</section>
+
 
 
 
