--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 </section>
 
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 
+<script src="script.js"></script>
 
 </body>
 </html>
